# esp32_project_testing_env

./: .gitignore  CLAUDE.md  README.md  SCAFFOLD_SPEC.md  conftest.py  pytest.ini  pytest_test_apps.py  requirements.txt
.github/workflows/: test.yml
components/component_A/: component_A.c
components/component_A/test/: CMakeLists.txt
components/component_B/include/: component_B.h
components/component_B/test/: test_component_B.c
mocks/component_A/: CMakeLists.txt
mocks/peripheral_mocks/driver/: README.md
real_components/component_A/: CMakeLists.txt
real_components/component_A/include/: component_A.h
real_components/component_B/: CMakeLists.txt  component_B.c
scripts/: build-all.sh  clean-all.sh
test_apps/test_component_A/: CMakeLists.txt
test_apps/test_component_B/: CMakeLists.txt
test_apps/test_integration_AB/: CMakeLists.txt
test_common/: sdkconfig.defaults.linux
test_common/test_main/: CMakeLists.txt
test_components/test_a/: test_component_A.c
test_components/test_b/: CMakeLists.txt
test_components/test_int/: CMakeLists.txt
tests/apps/test_component_A/: CMakeLists.txt
tests/apps/test_component_B/: CMakeLists.txt
tests/apps/test_integration_AB/: CMakeLists.txt
tests/common/: sdkconfig.defaults.esp32p4
tests/common/test_main/: CMakeLists.txt  test_main.c
tests/components/test_int/: test_integration_AB.c
tests/mocks/component_B/: CMakeLists.txt
tests/mocks/peripheral_mocks/driver/: CMakeLists.txt  README.md
